kubernetes/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app
  labels:
    app: weather-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: weather-app
  template:
    metadata:
      labels:
        app: weather-app
    spec:
      imagePullSecrets:
        - name: github-container-registry
      containers:
        - name: weather-app
          image: ghcr.io/drilonnol/city-weather-check-web-application:sha-80cdc87
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "0.2"
              memory: "256Mi"
            limits:
              cpu: "0.5"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
