kubernetes/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app
spec:
  selector:
    app: weather-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
